# rosOgre

./: CMakeLists.txt  README.md  package.xml  rosOgre.launch  rosOgre.sublime-workspace
config/: plugins.cfg  resources.cfg
include/: BaseApplication.h  TutorialApplication.h
include/PCLfunctions/: cloud_generation.h
include/params/: params.h
include/triangulation/: triangulation.cpp  triangulation.h
parameters/: parameters.yaml
run_from/: cmesh0.pcd  cmesh1.pcd  cmesh2.pcd  final_cloud.pcd  super_voxelized_centroid_cloud.pcd  super_voxelized_cloud.pcd  tmp
src/: BaseApplication.cpp  TutorialApplication.cpp
